# python_package_template

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: bandit.yaml  black.yaml  mypy.yaml  pylint.yaml  pytest.yaml
docs/source/: about.rst  conf.py  internals.rst
