[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "build",
    "setuptools >= 67.7.2",
	"setuptools_scm >= 7.1",
	"wheel >= 0.40.0"
]


[project]
name = "my_package"
authors = [
    {name = "David Slusser", email = "dbslusser@gmail.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
]
description = ""
dynamic = ["version"]
keywords = ["python", ]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "bandit",
    "black",
    "build",
    "coveralls",
    "mypy",
    "mypy-extensions",
    "ruff",
    "pytest",
    "pytest-cov",
    "safety",
    "setuptools >= 67.7.2",
	"setuptools_scm >= 7.1",
    "types-python-dateutil",
    "typing_extensions",
    "wheel >= 0.40.0",
]

docs = [
    "sphinx",
    "sphinx-rtd-theme",
]


[tool.bandit]
exclude_dirs = ["venv", "tests"]


[tool.black]
line-length = 120


[tool.coverage.report]
show_missing = true


[tool.coverage.run]
branch = true
source = ["tests"]
omit = ["*_test.py", "*/tests/*", "*__version__.py", "setup.py"]


[tool.flake8]
ignore = "E203,E266,H106,H904,E133"
max-line-length = 120
max-complexity = 25
hang-closing = true
exclude = "tests"


[tool.mypy]
exclude = ['venv/*']
ignore_missing_imports = true


# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
[tool.pytest.ini_options]
addopts = "-s -v -x --strict-markers -m 'not extra' --doctest-modules"
filterwarnings = [
    "ignore::UserWarning",
]
testpaths = ["tests"]


[tool.ruff]
line-length = 120


[tool.setuptools_scm]
write_to = "src/__version__.py"
